--- a/resources/css/fonts.css
+++ b/resources/css/fonts.css
@@ -1,112 +1,115 @@
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/noto-sans-v39-latin-500.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/noto-sans-v39-latin-500.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 600;
-  src: url('../fonts/noto-sans-v39-latin-600.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/noto-sans-v39-latin-600.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/noto-sans-v39-latin-700.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/noto-sans-v39-latin-700.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: url('../fonts/noto-sans-v39-latin-italic.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans';
+    font-style: italic;
+    font-weight: 400;
+    src: url('../fonts/noto-sans-v39-latin-italic.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/noto-sans-v39-latin-regular.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/noto-sans-v39-latin-regular.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans Bengali';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/noto-sans-bengali-v26-bengali_latin-500.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans Bengali';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/noto-sans-bengali-v26-bengali_latin-500.woff2')
+        format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans Bengali';
-  font-style: normal;
-  font-weight: 600;
-  src: url('../fonts/noto-sans-bengali-v26-bengali_latin-600.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans Bengali';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/noto-sans-bengali-v26-bengali_latin-600.woff2')
+        format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans Bengali';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/noto-sans-bengali-v26-bengali_latin-700.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans Bengali';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/noto-sans-bengali-v26-bengali_latin-700.woff2')
+        format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans Bengali';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/noto-sans-bengali-v26-bengali_latin-regular.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans Bengali';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/noto-sans-bengali-v26-bengali_latin-regular.woff2')
+        format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/noto-sans-v39-latin-500.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/noto-sans-v39-latin-500.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 600;
-  src: url('../fonts/noto-sans-v39-latin-600.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/noto-sans-v39-latin-600.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/noto-sans-v39-latin-700.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/noto-sans-v39-latin-700.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: url('../fonts/noto-sans-v39-latin-italic.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans';
+    font-style: italic;
+    font-weight: 400;
+    src: url('../fonts/noto-sans-v39-latin-italic.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Noto Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/noto-sans-v39-latin-regular.woff2') format('woff2');
+    font-display: swap;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/noto-sans-v39-latin-regular.woff2') format('woff2');
 }
-
